Add: Game board layout

--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
             <h2 id="heading">Tic Tac Toe</h2>
         </div>
         <div class="main">
-            <div class="game-info"></div>
-            <div class="game-board"></div>
-            <div class="player-info"></div>
+            <div class="game-info">
+                <h3 id="heading-text">Winner player</h3>
+            </div>
+            <div class="game-board">
+               <div class="cell" id="cell-1"></div>
+               <div class="cell" id="cell-2"></div>
+               <div class="cell" id="cell-3"></div>
+               <div class="cell" id="cell-4"></div>
+               <div class="cell" id="cell-5"></div>
+               <div class="cell" id="cell-6"></div>
+               <div class="cell" id="cell-7"></div>
+               <div class="cell" id="cell-8"></div>
+               <div class="cell" id="cell-9"></div>
+            </div>
+            <div class="player-info">
+                <h3 class="player-marker" id="player-1">X</h3>
+                <h3 class="player-marker" id="player-2">O</h3>
+            </div>
         </div>
         <div class="footer">
             <h4 class="footer-text">copywrite &copy; 2023 Saurabh choudhary
