--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="app.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 
@@ -18,15 +19,15 @@
                 <h3 id="heading-text">Winner player</h3>
             </div>
             <div class="game-board">
-                <div class="cell" id="cell-1">1</div>
-                <div class="cell" id="cell-2">2</div>
-                <div class="cell" id="cell-3">3</div>
-                <div class="cell" id="cell-4">4</div>
-                <div class="cell" id="cell-5">5</div>
-                <div class="cell" id="cell-6">6</div>
-                <div class="cell" id="cell-7">7</div>
-                <div class="cell" id="cell-8">8</div>
-                <div class="cell" id="cell-9">9</div>
+                <div class="cell" id="cell-1" data-pos="1">1</div>
+                <div class="cell" id="cell-2" data-pos="2">2</div>
+                <div class="cell" id="cell-3" data-pos="3">3</div>
+                <div class="cell" id="cell-4" data-pos="4">4</div>
+                <div class="cell" id="cell-5" data-pos="5">5</div>
+                <div class="cell" id="cell-6" data-pos="6">6</div>
+                <div class="cell" id="cell-7" data-pos="7">7</div>
+                <div class="cell" id="cell-8" data-pos="8">8</div>
+                <div class="cell" id="cell-9" data-pos="9">9</div>
             </div>
             <div class="player-info">
                 <h3 class="player-marker" id="player-1">Player 1: X</h3>
