Change: game board divs to button

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <h3 id="heading-text">Winner player</h3>
             </div>
             <div class="game-board">
-                <div class="cell" id="cell-1" data-pos="1">1</div>
-                <div class="cell" id="cell-2" data-pos="2">2</div>
-                <div class="cell" id="cell-3" data-pos="3">3</div>
-                <div class="cell" id="cell-4" data-pos="4">4</div>
-                <div class="cell" id="cell-5" data-pos="5">5</div>
-                <div class="cell" id="cell-6" data-pos="6">6</div>
-                <div class="cell" id="cell-7" data-pos="7">7</div>
-                <div class="cell" id="cell-8" data-pos="8">8</div>
-                <div class="cell" id="cell-9" data-pos="9">9</div>
+                <button class="cell" id="cell-1" data-pos="1"></button>
+                <button class="cell" id="cell-2" data-pos="2"></button>
+                <button class="cell" id="cell-3" data-pos="3"></button>
+                <button class="cell" id="cell-4" data-pos="4"></button>
+                <button class="cell" id="cell-5" data-pos="5"></button>
+                <button class="cell" id="cell-6" data-pos="6"></button>
+                <button class="cell" id="cell-7" data-pos="7"></button>
+                <button class="cell" id="cell-8" data-pos="8"></button>
+                <button class="cell" id="cell-9" data-pos="9"></button>
             </div>
             <div class="player-info">
                 <h3 class="player-marker" id="player-1">Player 1: X</h3>
@@ -38,15 +38,9 @@
             <h4 class="footer-text">Copywrite &copy; 2023 Saurabh choudhary</h4>
             <svg width="24px" height="24px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000">
-
                 <g id="SVGRepo_bgCarrier" stroke-width="0" />
-
                 <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
-
                 <g id="SVGRepo_iconCarrier">
-                    <title>github [#142]</title>
-                    <desc>Created with Sketch.</desc>
-                    <defs> </defs>
                     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                         <g id="Dribbble-Light-Preview" transform="translate(-140.000000, -7559.000000)" fill="#000000">
                             <g id="icons" transform="translate(56.000000, 160.000000)">
@@ -57,9 +51,7 @@
                         </g>
                     </g>
                 </g>
-
             </svg>
-
         </div>
     </div>
 </body>
