Add: Play again button and Default text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="main">
             <div class="game-info">
                 <div class="show-winner-wrapper">
-                    <h3 id="show-winner">Winner</h3>
+                    <h3 id="show-winner"></h3>
                 </div>
                 
             </div>
@@ -35,6 +35,7 @@
             </div>
             <div class="player-info">
                 <h3 class="player-marker" id="player-1">Player 1: X</h3>
+                <button id="play-again" type="button">Play Again</button>
                 <h3 class="player-marker" id="player-2">Player 2: O</h3>
             </div>
         </div>
