Create dynamic ui

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="icons/tic-tac-toe.svg">
     <script src="app.js" defer></script>
+    <script src="templates.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 
@@ -15,12 +16,12 @@
         <div class="header">
             <h2 id="game-title">Tic Tac Toe</h2>
         </div>
-        <div class="main">
-            <div class="game-info">
+        <div id="main-container">
+            <!-- <div class="game-info">
                 <div class="show-winner-wrapper">
                     <h3 id="show-winner"></h3>
                 </div>
-                
+
             </div>
             <div class="game-board">
                 <button class="cell" id="cell-1" data-pos="1" type="button"></button>
@@ -37,7 +38,7 @@
                 <h3 class="player-marker" id="player-1">Player 1: X</h3>
                 <button id="play-again" type="button">Play Again</button>
                 <h3 class="player-marker" id="player-2">Player 2: O</h3>
-            </div>
+            </div> -->
         </div>
         <div class="footer">
             <h4 class="footer-text">Copywrite &copy; 2023 Saurabh choudhary</h4>
