Centers player names

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
                 <button class="cell" id="cell-9" data-pos="9" type="button"></button>
             </div>
             <div class="player-info">
-                <h3 class="player-marker" id="player-1">Player 1: X</h3>
-                <button id="play-again" type="button">Play Again</button>
-                <h3 class="player-marker" id="player-2">Player 2: O</h3>
+                <h3 class="player-marker" id="player-1">You: X</h3>
+                <div id="play-again-wrapper">
+                    <button id="play-again" type="button">Play Again</button>
+                </div>
+                <h3 class="player-marker" id="player-2">AI: O</h3>
             </div>
         </div>
         <div class="footer">
